--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,38 @@
-.App {
-  text-align: center;
+/* layout */
+
+body {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 15px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.row {
+display: flex;
+flex-direction: row;
+width: 100%;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.col {
+  flex: 1;
+padding: 15px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.row > .col:first-child {
+border-right: 1px solid #ccc;
+max-width: 400px;
 }
 
-.App-intro {
-  font-size: large;
+.row > .col:last-child {
+background: #fafafa;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media all and (max-width: 767px) {
+  .row {
+      flex-direction: column;
+  }
+
+  .row > .col:first-child {
+      border-right: none;
+      max-width: none;
+  }
 }
